[package]
name = "instalk"
version = "0.1.0"
edition = "2021"
authors = ["Bastien"]
description = "For credits see credits.toml"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.30"
error-chain = "0.11"
colored = "1.6"
log = "0.4"
